--- a/api/projets/models/Projets.settings.json
+++ b/api/projets/models/Projets.settings.json
@@ -7,7 +7,10 @@
   },
   "options": {
     "increments": true,
-    "timestamps": true,
+    "timestamps": [
+      "created_at",
+      "updated_at"
+    ],
     "comment": ""
   },
   "attributes": {
@@ -21,6 +24,12 @@
       "model": "file",
       "via": "related",
       "plugin": "upload"
+    },
+    "link": {
+      "type": "string"
+    },
+    "thum_name": {
+      "type": "string"
     }
   }
 }
